--- a/Projeto/Src/PassagensScreen.fx.yaml
+++ b/Projeto/Src/PassagensScreen.fx.yaml
@@ -39,3 +39,7 @@
             LayoutMode: =LayoutMode.Auto
             ZIndex: =4
 
+            FooterComponentPassagensScreen As FooterComponent:
+                LayoutMinHeight: =640
+                LayoutMinWidth: =640
+
